Добавил попапы, сделал миксины на шрифты, прописал дефолтный шрифт в боди, убрал в меру своей испорченности дублирующийся css по шрифтам

--- a/source/less/index-download.less
+++ b/source/less/index-download.less
@@ -5,17 +5,14 @@
   padding-right: 20px;
 }
 .download__button {
+  .bold-font();
   font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans Bold', arial;
   color: @white;
   line-height: 18px;
 }
-.download__info{
+.download__info {
+  .light-font();
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: @light-grey;
   line-height: 24px;
 }
-
