--- a/source/less/index-reviews.less
+++ b/source/less/index-reviews.less
@@ -3,18 +3,14 @@
   padding-left: 20px;
   padding-right: 20px;
 }
-
 .reviews__author-name{
+  .bold-font();
   font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans Light', arial;
   color: black;
   line-height: 30px;
 }
 .reviews__text{
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
