--- a/source/less/index-slogan.less
+++ b/source/less/index-slogan.less
@@ -5,9 +5,8 @@
   padding-top: 45px;
 }
 .slogan__text {
+  .light-font();
   font-size: 24px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: @grey;
   line-height: normal;
 }
