--- a/source/less/photo-page-title.less
+++ b/source/less/photo-page-title.less
@@ -9,16 +9,13 @@
   background-repeat: no-repeat;
 }
 .page-title__title {
+  .light-font();
   font-size: 24px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: @white;
   line-height: normal;
 }
 .page-title__title-text{
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
