--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,8 +1,12 @@
-.nav-font() {
-  font-size: 18px;
+.regular-font(){
+  font-weight: normal;
+  font-family: 'Open Sans Regular', arial;
+}
+.bold-font(){
   font-weight: bold;
   font-family: 'Open Sans Bold', arial;
-  font-color: @white;
-  text-transform: uppercase;
-  line-height: 32px;
+}
+.light-font(){
+  font-weight: normal;
+  font-family: 'Open Sans Light', arial;
 }
