--- a/source/less/form-user-form.less
+++ b/source/less/form-user-form.less
@@ -4,8 +4,6 @@
 .user-form__text-block {
   margin-bottom: 52px;
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
@@ -15,16 +13,12 @@
 }
 .user-form__label-input{
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @magenta;
   line-height: 30px;
   text-transform: uppercase;
 }
 .user-form__input{
   font-size: 18px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
@@ -35,16 +29,12 @@
 }
 .form-title{
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @magenta;
   line-height: 30px;
   text-transform: uppercase;
 }
 .user-form__label-checkbox{
   font-size: 18px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
@@ -60,8 +50,6 @@
 }
 .user-form__label-radio{
   font-size: 18px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
@@ -72,16 +60,39 @@
 }
 .user-form__feedback-text{
   font-size: 18px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @dark-grey;
   line-height: 30px;
 }
-.user-form__btn-send{
+.user-form__popup-text-block{
+  padding-top: 45px;
+  padding-bottom: 38px;
+  background-color: @white;
+}
+.user-form__popup-btn-block{
+  padding-top: 48px;
+  padding-bottom: 52px;
+  background-color: @light-grey;
+}
+.user-form__popup-header{
+  .bold-font();
+  font-size: 14px;
+  color: @grey;
+  line-height: 24px;
+}
+.user-form__popup-text{
+  font-size: 14px;
+  color: @grey;
+  line-height: 24px;
+}
+.form-btn{
+  .bold-font();
   font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans Bold', arial;
   color: @white;
   line-height: 30px;
   text-transform: uppercase;
+}
+.user-form__popup-error{
+  padding-top: 45px;
+  padding-bottom: 50px;
+  background-color: @white;
 }
