--- a/source/less/index-advantages.less
+++ b/source/less/index-advantages.less
@@ -5,16 +5,14 @@
   display: none;
 }
 .advantages__title{
+  .bold-font();
   font-size: 14px;
-  font-weight: bold;
-  font-family: 'Open Sans Light', arial;
   color: black;
   line-height: 24px;
 }
 .advantages-description{
+  .light-font();
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: black;
   line-height: 24px;
 }
