--- a/source/less/index-goods.less
+++ b/source/less/index-goods.less
@@ -2,27 +2,22 @@
   background-color: @grey;
 }
 .goods__name{
+  .bold-font();
   font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans Bold', arial;
   color: @white;
   line-height: 30px;
   text-transform: uppercase;
 }
 .goods__price{
+  .light-font();
   font-size: 24px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: @white;
   line-height: 30px;
   text-transform: uppercase;
 }
 .goods__feature{
   font-size: 14px;
-  font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
   color: @grey;
   line-height: 30px;
   text-transform: uppercase;
 }
-
