--- a/source/less/index-page-footer.less
+++ b/source/less/index-page-footer.less
@@ -7,25 +7,21 @@
   background-repeat: no-repeat;
 }
 .contacts__recourse{
+  .light-font();
   font-size: 24px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: @grey;
   line-height: normal;
   text-transform: uppercase;
 }
 .contacts__text{
+  .bold-font();
   font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans Bold', arial;
   color: @grey;
   line-height: normal;
 }
 .contacts__info{
+  .light-font();
   font-size: 24px;
-  font-weight: normal;
-  font-family: 'Open Sans Light', arial;
   color: @magenta;
   line-height: normal;
 }
-
