--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,7 +1,6 @@
 .main-nav{
+  .bold-font();
   font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans Bold', arial;
   color: @white;
   text-transform: uppercase;
   line-height: 32px;
