С помощью заработавшего стайллинта исправил варнинги

--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,12 +1,12 @@
-.regular-font(){
+.regular-font() {
   font-weight: normal;
-  font-family: 'Open Sans Regular', arial;
+  font-family: "Open Sans Regular", "arial", sans-serif;
 }
-.bold-font(){
+.bold-font() {
   font-weight: bold;
-  font-family: 'Open Sans Bold', arial;
+  font-family: "Open Sans Bold", "arial", sans-serif;
 }
-.light-font(){
+.light-font() {
   font-weight: normal;
-  font-family: 'Open Sans Light', arial;
+  font-family: "Open Sans Light", "arial", sans-serif;
 }
