--- a/source/less/photo-photo.less
+++ b/source/less/photo-photo.less
@@ -1,39 +1,46 @@
-.photo{
+.photo {
   font-size: 12px;
   line-height: 24px;
 }
-.photo__item{
+
+.photo__item {
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
-  background-color:@light-grey;
+  background-color: @light-grey;
 }
-.photo__item:last-child{
+
+.photo__item:last-child {
   margin-bottom: 50px;
 }
-.photo__author-name{
+
+.photo__author-name {
   font-weight: bold;
   color: @grey;
 }
-.photo__time{
+
+.photo__time {
   font-weight: normal;
   color: grey;
   text-transform: uppercase;
 }
-.photo__text{
+
+.photo__text {
   font-weight: normal;
   color: @grey;
 }
-.photo__like{
+
+.photo__like {
   font-weight: normal;
   color: @magenta;
   text-transform: uppercase;
 }
-.photo__slogan{
+
+.photo__slogan {
   margin-bottom: 50px;
   margin-left: 20px;
   margin-right: 20px;
   font-weight: normal;
   color: @grey;
-  background-color:white;
+  background-color: @white;
 }
