И последний варнинг исправлен

--- a/source/less/photo-page-title.less
+++ b/source/less/photo-page-title.less
@@ -5,8 +5,7 @@
 .page-title__title-wrapper {
   padding-top: 102px;
   padding-bottom: 87px;
-  background-image:
-    url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
 
