Убрал префиксы из названия less файлов. Все классы, не относящиеся по названию к бэм блокам покидал в отдельный файл, исправил опечатку с классом .advantages__description

--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -2,10 +2,6 @@
   background-color: @light-grey;
 }
 
-.visually-hidden {
-  display: none;
-}
-
 .advantages__title {
   .bold-font();
   font-size: 14px;
@@ -13,7 +9,7 @@
   line-height: 24px;
 }
 
-.advantages-description {
+.advantages__description {
   .light-font();
   font-size: 14px;
   color: black;
