Подключил новый файл для общих стилей к style.less, дописал туда стили для body

--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,3 +1,11 @@
+body {
+  .regular-font();
+  font-size: 14px;
+  color: @grey;
+  line-height: 24px;
+  background-color: @white;
+}
+
 .form-title {
   font-size: 14px;
   color: @magenta;
