--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,26 +1,19 @@
 @import "./colors.less";
 @import "./fonts.less";
+@import "./scaffolding.less";
 @import "./page-header.less";
 @import "./main-nav.less";
-@import "./index-title-image.less";
-@import "./index-download.less";
-@import "./index-slogan.less";
-@import "./index-advantages.less";
-@import "./index-reviews.less";
-@import "./index-goods.less";
+@import "./title-image.less";
+@import "./download.less";
+@import "./slogan.less";
+@import "./advantages.less";
+@import "./reviews.less";
+@import "./goods.less";
 @import "./index-page-footer.less";
 
-@import "./photo-page-title.less";
-@import "./photo-photo.less";
-@import "./photo-upload.less";
+@import "./page-title.less";
+@import "./photo.less";
+@import "./upload.less";
 @import "./page-footer.less";
 
-@import "./form-user-form.less";
-
-body {
-  .regular-font();
-  font-size: 14px;
-  color: @grey;
-  line-height: 24px;
-  background-color: @white;
-}
+@import "./user-form.less";
