Visually-hidden щоставил в общем файле. Остальное переименовал по БЭМ и распихал обратно по файлам, соответствующим блокам БЭМ, в которых они лежат

--- a/source/less/user-form.less
+++ b/source/less/user-form.less
@@ -99,3 +99,18 @@
   padding-bottom: 50px;
   background-color: @white;
 }
+
+.user-form__form-title {
+  font-size: 14px;
+  color: @magenta;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.user-form__form-btn {
+  .bold-font();
+  font-size: 18px;
+  color: @white;
+  line-height: 30px;
+  text-transform: uppercase;
+}
