--- a/source/less/index-page-footer.less
+++ b/source/less/index-page-footer.less
@@ -6,3 +6,25 @@
     url("../img/bg-triangle-white-footer.svg");
   background-repeat: no-repeat;
 }
+
+.index-page-footer__contacts-recourse {
+  .light-font();
+  font-size: 24px;
+  color: @grey;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.index-page-footer__contacts-text {
+  .bold-font();
+  font-size: 18px;
+  color: @grey;
+  line-height: normal;
+}
+
+.index-page-footer__contacts-info {
+  .light-font();
+  font-size: 24px;
+  color: @magenta;
+  line-height: normal;
+}
