--- a/source/less/slogan.less
+++ b/source/less/slogan.less
@@ -1,8 +1,14 @@
 .slogan {
-  background-color: white;
-  background-image: url("../img/bg-triangle-white.svg");
-  background-repeat: no-repeat;
+  height: 218px;
+  width: 320px;
+  margin: 0 auto;
+  background-color: @white;
+  //background-image: url("../img/bg-triangle-white.svg");
+  //background-repeat: no-repeat;
+  //background-position: 0 100px;
+  //background-size: 100% 100%;
   padding-top: 45px;
+  padding-bottom: 32px;
 }
 
 .slogan__text {
@@ -11,3 +17,4 @@
   color: @grey;
   line-height: normal;
 }
+
