--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,3 +1,19 @@
-.page__header {
+.page-header__header-control {
   background-color: @grey;
+  width: 320px;
+  height: 70px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__header-control {
+    width: 660px;
+    height: 110px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__header-control {
+    display: none;
+  }
 }
