--- a/source/less/page-footer-index.less
+++ b/source/less/page-footer-index.less
@@ -1,7 +1,7 @@
-.page-footer {
+.page-footer-index {
+  display: none;
   width: 320px;
   margin: 0 auto;
-  padding-top: 40px;
 }
 
 .social__list {
@@ -15,14 +15,14 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-footer {
+  .page-footer-index {
     display: block;
     width: 660px;
     padding-top: 38px;
     padding-bottom: 36px;
   }
 
-  .page-footer__wrapper {
+  .page-footer-index__wrapper {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
@@ -30,7 +30,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-footer {
+  .page-footer-index {
     width: 1200px;
     padding-top: 77px;
     padding-bottom: 72px;
