--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,11 +5,11 @@
 @import "./main-nav.less";
 @import "./title-image.less";
 @import "./download.less";
-@import "./slogan.less";
 @import "./advantages.less";
 @import "./reviews.less";
 @import "./goods.less";
 @import "./index-page-footer.less";
+@import "./page-footer-index.less";
 
 @import "./page-title.less";
 @import "./photo.less";
