--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -31,7 +31,8 @@
 
 @media (min-width: @desktop-width) {
   .main-nav {
-    width: 790px;
+   //width: 790px;
+    width: 1200px;
     .regular-font();
     line-height: 18px;
     text-transform: none;
