--- a/source/less/page-title.less
+++ b/source/less/page-title.less
@@ -1,15 +1,27 @@
 .page-title {
-  margin-top: -66px;
+  width: 320px;
+  margin: 0 auto;
+  background: @dark-grey;
 }
 
 .page-title__title-wrapper {
+  width: 230px;
+  margin: 0 auto;
   padding-top: 102px;
   padding-bottom: 87px;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
+  background: chocolate;
+}
+
+.page-title__text-wrapper {
+  width: 245px;
+  margin: 0 auto;
+  padding-top: 55px;
+  padding-bottom: 55px;
+  background-color: @white;
 }
 
 .page-title__title {
+  width: 230px;
   .light-font();
   font-size: 24px;
   color: @white;
@@ -20,4 +32,50 @@
   font-size: 14px;
   color: @dark-grey;
   line-height: 30px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-title {
+    width: 660px;
+  }
+
+  .page-title__title-wrapper {
+    width: 385px;
+    //padding-top: 192px;
+    //padding-bottom: 150px;
+    //padding-top: 0;
+    //padding-bottom: 0;
+  }
+
+  .page-title__text-wrapper {
+    width: 385px;
+    padding-top: 85px;
+    padding-bottom: 85px;
+  }
+
+  .page-title__title {
+    width: 480px;
+    font-size: 50px;
+  }
+
+  .page-title__title-text {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-title {
+    width: 1200px;
+  }
+
+  .page-title__title-wrapper {
+    width: 750px;
+    //padding-top: 185px;
+    //padding-bottom: 110px;
+  }
+
+  .page-title__text-wrapper {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
 }
