--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -26,6 +26,10 @@
   background-position: 80px 475px;
 }
 
+.advantages__features-picture {
+  display: none;
+}
+
 .advantages__list {
   margin: 0;
   padding: 0;
@@ -79,20 +83,31 @@
     background-image: none;
   }
 
+  .advantages__features-wrapper {
+    display: flex;
+  }
+
+  .advantages__features-picture-tablet {
+    width: 330px;
+  }
+
   .advantages__list {
-    margin-left: 50%;
     margin-top: 80px;
+    width: 330px;
   }
 
   .advantages__britain-scientists {
-    display: block;
+    display: flex;
     height: 234px;
     padding-top: 100px;
-    background-color: chocolate;
+  }
+
+  .advantages__clocks-image {
+    width: 330px;
   }
 
   .advantages__britain-scientists-block {
-    margin-left: 50%;
+    width: 330px;
   }
 
   .advantages__britain-scientists-title {
@@ -142,10 +157,20 @@
     background-image: none;
   }
 
+  .advantages__features-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .advantages__features-picture-tablet {
+    width: 0;
+  }
+
   .advantages__list {
     display: flex;
     justify-content: space-around;
     margin: 0;
+    width: 940px;
   }
 
   .advantages__item {
@@ -155,13 +180,17 @@
   }
 
   .advantages__britain-scientists {
-    display: block;
+    display: flex;
     height: 362px;
-    //padding-top: 100px;
+  }
+
+  .advantages__clocks-image {
+    width: 365px;
   }
 
   .advantages__britain-scientists-block {
-    margin-left: 380px;
+    align-self: center;
+    width: 605px;
   }
 
   .advantages__britain-scientists-title {
