--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,3 +1,9 @@
+.page-header {
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
 .page-header__header-control {
   background-color: @grey;
   width: 320px;
