--- a/source/less/user-form.less
+++ b/source/less/user-form.less
@@ -2,6 +2,7 @@
   padding-top: 55px;
   width: 320px;
   margin: 0 auto;
+  color: @grey;
 }
 
 .user-form__form {
@@ -11,9 +12,6 @@
 
 .user-form__text-block {
   margin-bottom: 52px;
-  font-size: 14px;
-  color: @dark-grey;
-  line-height: 30px;
 }
 
 .user-form__user-name {
@@ -22,29 +20,28 @@
 }
 
 .user-form__label-input {
-  font-size: 14px;
   color: @magenta;
-  line-height: 30px;
   text-transform: uppercase;
+}
+
+.user-form__common-font {
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.user-form__small-font {
+  font-size: 14px;
+  line-height: 30px;
 }
 
 .user-form__input {
   display: flex;
-  font-size: 18px;
-  color: @dark-grey;
-  line-height: 30px;
 }
 
 .user-form__achievments {
   padding-top: 42px;
   padding-bottom: 42px;
   background-color: @light-grey;
-}
-
-.user-form__label-checkbox {
-  font-size: 18px;
-  color: @dark-grey;
-  line-height: 30px;
 }
 
 .user-form__contacts {
@@ -59,72 +56,20 @@
   background-color: @light-grey;
 }
 
-.user-form__label-radio {
-  font-size: 18px;
-  color: @dark-grey;
-  line-height: 30px;
-}
-
 .user-form__feedback {
   padding-top: 42px;
   padding-bottom: 42px;
   background-color: @white;
 }
 
-.user-form__feedback-text {
-  font-size: 18px;
-  color: @dark-grey;
-  line-height: 30px;
-}
-
-.user-form__popup {
-  display: none;
-}
-
-.user-form__popup-text-block {
-  padding-top: 45px;
-  padding-bottom: 38px;
-  background-color: @white;
-}
-
-.user-form__popup-btn-block {
-  padding-top: 48px;
-  padding-bottom: 52px;
-  background-color: @light-grey;
-}
-
-.user-form__popup-header {
-  .bold-font();
-  font-size: 14px;
-  color: @grey;
-  line-height: 24px;
-}
-
-.user-form__popup-text {
-  font-size: 14px;
-  color: @grey;
-  line-height: 24px;
-}
-
-.user-form__popup-error {
-  display: none;
-  padding-top: 45px;
-  padding-bottom: 50px;
-  background-color: @white;
-}
-
 .user-form__form-title {
-  font-size: 14px;
   color: @magenta;
-  line-height: 30px;
   text-transform: uppercase;
 }
 
 .user-form__form-btn {
   .bold-font();
-  font-size: 18px;
   color: @white;
-  line-height: 30px;
   text-transform: uppercase;
 }
 
@@ -136,10 +81,6 @@
   display: flex;
   flex-direction: column;
 }
-
-//.user-form__legend {
-//  order: 2;
-//}
 
 @media (min-width: @tablet-width) {
   .user-form {
@@ -265,7 +206,6 @@
   }
 
   .user-form__achievments {
-    //order: 1;
     width: 940px;
     height: 230px;
     display: flex;
