--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "./scaffolding.less";
 @import "./page-header.less";
 @import "./main-nav.less";
+@import "./site-list.less";
 @import "./title-image.less";
 @import "./download.less";
 @import "./advantages.less";
