--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,9 +1,13 @@
 @grey: #283645;
 @dark-grey: #1d2631;
-@white: #ffffff;
 @light-grey: #f2f2f2;
+@border-grey: #485461;
+@white: #ffffff;
 @green: #3dc644;
 @orange: #f25b26;
 @magenta: #d22856;
+@pale-magenta: #68384f;
+@black: #000000;
 @tablet-width: 768px;
 @desktop-width: 1200px;
+@not-desktop-width: 1199px;
